--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,66 @@
-//
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: sans-serif;
+    background-color: #efefef;
+}
+
+ul,
+ol,
+menu {
+    list-style-type: none;
+}
+
+.container {
+    max-width: 1200px;
+    margin-inline: auto;
+    padding: 2rem 1rem;
+    &.home {
+        .title {
+            margin-bottom: 4rem;            
+            text-align: center;
+            font-size: 4rem;            
+        }
+        .films-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            .list-item {
+                flex-basis: calc(calc(100% - calc(1rem * 4)) / 5);
+                padding: 1rem;
+                border: 1px solid lightcoral;
+                border-radius: 5px;
+                .accent {
+                    font-weight: bold;
+                }
+                .film-title {
+                    min-height: 61px;
+                    padding-bottom: 1rem;
+                    text-align: center;
+                    font-size: 1.2rem;
+                    border-bottom: 1px solid lightcoral;
+                }
+                .film-title,
+                .original-title, 
+                .nationality,
+                .date {
+                    margin-bottom: 1rem;
+                }
+                .film-title,
+                .original-title, 
+                .nationality,
+                .date,
+                .vote {
+                    .accent {
+                        display: block;
+                        line-height: 1.75;
+                    }
+                }
+            }
+        }
+    }
+}
